# frc-rag-mcpserver

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
client/: MANIFEST.in  MCP_CONFIG_EXAMPLE.md  README.md  build_executable.py  mcp-config-claude-desktop.json  mcp-config-vscode.json  pyinstaller_entry.py  pyproject.toml
client/src/wpilib_rag/: __init__.py  __main__.py  config.py  database_loader.py  embedding_client.py  query_engine.py  server.py
